[package]
name = "grpcio-sys"
version = "0.5.0-alpha.5"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "bindings"]
repository = "https://github.com/pingcap/grpc-rs"
homepage = "https://github.com/pingcap/grpc-rs"
documentation = "https://docs.rs/grpcio-sys"
description = "FFI bindings to gRPC c core library"
categories = ["external-ffi-bindings", "network-programming"]
edition = "2018"
exclude = [
    "grpc/",
]

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }

[features]
default = []
secure = []
openssl = ["secure"]
openssl-vendored = ["openssl", "openssl-sys"]
no-omit-frame-pointer = []
